# 250816_AI_AGENTS

./: .env.example  .gitignore  README.md  main.ipynb  main.py  pyproject.toml
A00_Understanding_AI/: main.ipynb  main.py  main2.ipynb  pyproject.toml
A01_News_Reader_Agent/: main.py  main2.py  pyproject.toml  tools.py
A02_Job_Hunter_Agent/: main.py  pyproject.toml  tools.py
A03_Content_Pipeline_Agent/: crewai_flow.html  main.py  models.py  pyproject.toml  seo_crew.py  virality_crew.py
A04_Grok_Deep_Research_Agent/: deep-research-team.ipynb  email-optimizer-team.ipynb  pyproject.toml  report.md  tools.py
A05_ChatGPT_Clone/: ai-memory.db  ai-memory.db-shm  ai-memory.db-wal  cht-gpt-clone-memory.db  dummy-agent.ipynb  handoffs-agent.ipynb  justAgent.js  main.py  pyproject.toml  text_mcp.py  weather_output.js
A06_Customer_Support_Agent/: customer-support-memory.db  main.py  models.py  pyproject.toml
A07_Financial_Advisor/: pyproject.toml  tools.py
A08_Youtube_Shorts_Maker_Agent/: pyproject.toml
A09_Email_Refiner_Agent/: README.md  api_mode.ipynb  code_mode.ipynb  deploy.py  main.py  pyproject.toml  remote.py  session.db
A09_Email_Refiner_Agent/email_refiner/: agent.py  prompt.py
A09_Email_Refiner_Agent/travel_advisor_agent/: agent.py  eachFucntion.evalset.json
A09_Email_Refiner_Agent/travel_advisor_agent/.adk/eval_history/: travel_advisor_agent_eachFucntion_1759982575.6730351.evalset_result.json  travel_advisor_agent_eachFucntion_1759982626.9183202.evalset_result.json  travel_advisor_agent_eachFucntion_1759982748.504817.evalset_result.json
A10_Hello_Langgraph/: chat-bot.ipynb  chat.db  chat.db-shm  chat.db-wal  langgraph.json  main.ipynb  main.py  memory.db-shm  memory.db-wal  poem_agent.py  pyproject.toml  time-stamp.ipynb
A11_YouTube_ThumbNail_Agent/: graph.py  langgraph.json  (+2 more)
(+88 files in other folders)
