[project]
name = "a09-email-refiner-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[eval]>=1.12.0",
    "google-genai>=1.31.0",
    "ipykernel>=6.30.1",
    "litellm>=1.76.0",
    "requests>=2.32.5",
    "sseclient-py>=0.0.27",

#    for Jupiter
    "notebook>=7.4.7",
    "pip>=25.2",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
